AGT-6 añade edit de places
