# app/Http/Controllers/Api/V1/PlaceController.php
@@ -9,6 +9,8 @@ use App\Repositories\Interfaces\PlaceRepoInterface;
 use App\Services\PlaceService;
 use App\Models\Place;
 
+use Auth;
+
 /**
  * @OA\Tag(
  *     name="Places",
@@ -117,13 +119,48 @@ class PlaceController extends BaseResourceController {
     * )
     */
     /**
-     * Display the user places.
+     * Display the (current) user places.
      *
      * @return \Illuminate\Http\Response
      */
     public function index(Request $req)
     {
         return parent::index($req);
+    }
+
+    /**
+    * @OA\Get(
+    *     path="/api/v1/admin-places",
+    *     summary="Shows all the places",
+    *     tags={"Places"},
+    *     security={{"passport": {"*"}}},
+    *     @OA\Response(
+    *         response=200,
+    *         description="Shows all the users places",
+    *         @OA\JsonContent(
+    *             type="object"
+    *         ),
+    *     ),
+    *     @OA\Response(
+    *         response=401,
+    *         description="Unauthorized.",
+    *         @OA\JsonContent(
+    *             type="object"
+    *         ),
+    *     )
+    * )
+    */
+    /**
+     * Display the (current) user places.
+     *
+     * @return \Illuminate\Http\Response
+     */
+    public function adminIndex(Request $req)
+    {
+        return parent::toJsonResource(
+            $this->repo->adminAll(),
+            true
+        );
     }
 
     /**
@@ -139,7 +176,7 @@ class PlaceController extends BaseResourceController {
      *                  property="place",
      *                  type="object",
      *                  ref="#/components/schemas/Place"
-     *              ),
+     *              )
      *         ),
      *     ),
      *     @OA\Response(
@@ -165,8 +202,112 @@ class PlaceController extends BaseResourceController {
     * @return \Illuminate\Http\Response
     */
     public function store(Request $req) {
-        $this->exceptArray = ['place.user_id'];
+        if (empty($req->input('place.user_id'))) {
+            $this->exceptArray = ['place.user_id'];
+            $this->extraData = [
+                'place' => [
+                    'user_id' => Auth::user()->id
+                ]
+            ];
+        }
         return parent::store($req);
+    }
+
+    /**
+    * @OA\Get(
+    *     path="/api/v1/places/{place}",
+    *     summary="Shows the specified place",
+    *     tags={"Places"},
+    *     security={{"passport": {"*"}}},
+    *     @OA\Parameter(
+    *         name="place",
+    *         in="path",
+    *         description="ID of the place",
+    *         required=true,
+    *         @OA\Schema(
+    *             type="integer",
+    *             format="int64",
+    *             example=1
+    *         )
+    *     ),
+    *     @OA\Response(
+    *         response=200,
+    *         description="Shows the specified place",
+    *         @OA\JsonContent(
+    *             type="object"
+    *         ),
+    *     ),
+    *     @OA\Response(
+    *         response=401,
+    *         description="Unauthorized.",
+    *         @OA\JsonContent(
+    *             type="object"
+    *         ),
+    *     )
+    * )
+    */
+    /**
+     * Get the specified element
+     * @param \Illuminate\Http\Request $req
+     * @param  string $id
+     *
+     * @return \Illuminate\Http\Response
+     */
+    public function show(Request $req, $id) {
+        return parent::show($req, $id);
+    }
+
+    /**
+    * @OA\Put(
+    *     path="/api/v1/places/{place}",
+    *     summary="Updates a place",
+    *     tags={"Place"},
+    *     security={{"passport": {"*"}}},
+    *     @OA\Parameter(
+    *         description="Place to be updated",
+    *         in="path",
+    *         name="place",
+    *         required=true,
+    *         @OA\Schema(
+    *             type="integer",
+    *             format="int64"
+    *         )
+    *     ),
+    *     @OA\RequestBody(
+    *         description="Data of the place to be updated",
+    *         @OA\JsonContent(
+    *              @OA\Property(
+    *                  property="place",
+    *                  type="object",
+    *                  ref="#/components/schemas/Place"
+    *              ),
+    *         ),
+    *     ),
+    *     @OA\Response(
+    *         response=201,
+    *         description="Place that was updated",
+    *         @OA\JsonContent(
+    *             type="object"
+    *         ),
+    *     ),
+    *     @OA\Response(
+    *         response=422,
+    *         description="Unprocessable Entity.",
+    *         @OA\JsonContent(
+    *             type="object"
+    *         ),
+    *     )
+    * )
+    */
+    /**
+     * Updates the specified resource
+    *
+     * @param  \Illuminate\Http\Request $req
+     * @param  string  $id
+     * @return \Illuminate\Http\Response
+    */
+    public function update(Request $req, $id) {
+        return parent::update($req, $id);
     }
 
 }
